# dinsow-ik

./: CMakeLists.txt  README.md  client.cpp  client.h  compile_message.sh  dinsow_ik_test.pro  dinsowbody.qrc  dinsowkinematic.cpp  dinsowkinematic.h  dinsowmotion.cpp  dinsowmotion.h  jointentity.cpp  jointentity.h  jointsettingsdialog.cpp  jointsettingsdialog.h  jointsettingsdialog.ui  linkentity.cpp  linkentity.h  main.cpp  mainwindow.cpp  mainwindow.h  meshentity.cpp  meshentity.h  message.pb.cc  message.pb.h  message.proto  message_pb2.py  scenemodifier.cpp  scenemodifier.h  servocontroller.cpp  servocontroller.h  servolimit.h  widget3d.cpp  widget3d.h
mesh/: head.STL
